--- a/sass/_CAROUSEL.scss
+++ b/sass/_CAROUSEL.scss
@@ -1,111 +1,112 @@
 @charset "UTF-8";
 
 
-$slider-pb: (620 / 1920) * 100%;
+$slider-pb: (768 / 1920) * 100%;
 
-.banner {
-	position: relative;
+@mixin program1() {
 	height: 0;
 	padding-bottom: $slider-pb;
 }
 
-.banner, .flexslider, .slides, .slides li {
+.flexslider, .slides, .slides li {
 	width: 100%;
 }
-#slider {
+.flexslider {
+	position: relative;
+	height: 100%;
+	margin-bottom: 0;
+	border: none;
 	overflow: hidden;
 	.slides {
-		// width: 100%;
-		// height: 0;
-		// padding-bottom: $slider-pb;
+		width: 100%;
+		height: 100%;
 		&>li {
-			// width: 100%;
-			// height: 0;
-			// padding-bottom: $slider-pb;
-			// @include background-size(cover);
-			// background-position:50% 50%;
+			width: 100%;
+			height: 100%;
+			@include background-size(cover);
+			background-position:50% 50%;
 		}
 	}
 }
 //  方案二  Slider w/thumbnail controlNav pattern
-.flex-control-thumbs {
-	position: absolute;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	width: $cnt_width;
-	height: 80px;
-	margin: auto;
-	@include bg(transparent);
-	li {
-		position: relative;
-		height: 70px;
-		margin: 0 5px;
-		&:before {
-			@include psudoClass;
-			position: absolute;
-			top: 0;
-			left: 0;
-			@include wh;
-			@include bg(rgba(#000, 0.6));
-		}
-		&.flex-active {
-			position: relative;
-			top: -5px;
-			&:before {
-				// @include opacity(0);
-				@include bg(transparent);
-				border: 3px solid #e60012;
-			}
-		}
-	}
-}
+// .flex-control-thumbs {
+// 	position: absolute;
+// 	left: 0;
+// 	right: 0;
+// 	bottom: 0;
+// 	width: $cnt_width;
+// 	height: 80px;
+// 	margin: auto;
+// 	@include bg(transparent);
+// 	li {
+// 		position: relative;
+// 		height: 70px;
+// 		margin: 0 5px;
+// 		&:before {
+// 			@include psudoClass;
+// 			position: absolute;
+// 			top: 0;
+// 			left: 0;
+// 			@include wh;
+// 			@include bg(rgba(#000, 0.6));
+// 		}
+// 		&.flex-active {
+// 			position: relative;
+// 			top: -5px;
+// 			&:before {
+// 				// @include opacity(0);
+// 				@include bg(transparent);
+// 				border: 3px solid #e60012;
+// 			}
+// 		}
+// 	}
+// }
 
 
 //  方案一  Slider w/thumbnail slider
-#carousel {
-	position: absolute;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	width: $cnt_width;
-	height: 80px;
-	margin: auto;
-	@include bg(transparent);
-	.slides {
-		position: absolute;
-		bottom: 0;
-		&>li {
-			position: relative;
-			height: 70px;
-			margin: 0 5px;
-			@include bg(50%, 50%);
-			@include background-size(cover);
-			transition: all 0.3s ease(in-quart);
-			&:before {
-				@include psudoClass;
-				position: absolute;
-				top: 0;
-				left: 0;
-				@include wh;
-				@include bg(rgba(#000, 0.6));
-				transition: all 0.3s ease(in-quart);
-			}
-			&.flex-active-slide {
-				position: relative;
-				top: -5px;
-				&:before {
-					// @include opacity(0);
-					@include bg(transparent);
-					border: 3px solid #e60012;
-				}
-			}
-		}
-	}
-	.flex-viewport {
-		height: 100%;
-	}
-}
+// #carousel {
+// 	position: absolute;
+// 	left: 0;
+// 	right: 0;
+// 	bottom: 0;
+// 	width: $cnt_width;
+// 	height: 80px;
+// 	margin: auto;
+// 	@include bg(transparent);
+// 	.slides {
+// 		position: absolute;
+// 		bottom: 0;
+// 		&>li {
+// 			position: relative;
+// 			height: 70px;
+// 			margin: 0 5px;
+// 			@include bg(50%, 50%);
+// 			@include background-size(cover);
+// 			transition: all 0.3s ease(in-quart);
+// 			&:before {
+// 				@include psudoClass;
+// 				position: absolute;
+// 				top: 0;
+// 				left: 0;
+// 				@include wh;
+// 				@include bg(rgba(#000, 0.6));
+// 				transition: all 0.3s ease(in-quart);
+// 			}
+// 			&.flex-active-slide {
+// 				position: relative;
+// 				top: -5px;
+// 				&:before {
+// 					// @include opacity(0);
+// 					@include bg(transparent);
+// 					border: 3px solid #e60012;
+// 				}
+// 			}
+// 		}
+// 	}
+// 	.flex-viewport {
+// 		height: 100%;
+// 	}
+// }
 
 
 // #hcarousel {
@@ -124,37 +125,15 @@ $slider-pb: (620 / 1920) * 100%;
 //   border-bottom: 1px solid $Grey_color1;
 // }
 
-.flexslider {
-	border: 0;
-	// background-color: transparent;
-	// border-radius: 0;
-	// margin-bottom: 1em !important;
-	// @include box-shadow(none);
-	// .slides {
-	// 	width: 100%;
-	// 	height: 0;
-	// 	padding-bottom: $pb;
-	// 	border-bottom: 1px solid #fff;
-	// 	&>li {
-	// 		width: 100%;
-	// 		height: 0;
-	// 		padding-bottom: $pb;
-	// 		background-size:cover;
-	// 		background-position:50% 50%;
-	// 	}
-	// }
-}
 
-// .flex-control-nav {
-//   width: auto;
-//   // bottom: auto;
-//   // right: 118px;
-//   bottom: -18px;
-//   right: 0;
-//   z-index:20;
-//   position: absolute;
-//   text-align: center;
-// }
+
+.flex-control-nav {
+	@include absolute($B:0, $L:0, $R:0);
+	width: auto;
+	margin: auto;
+	z-index:20;
+	text-align: center;
+}
 // .flex-direction-nav {
 // 	position: absolute;
 // 	bottom:20px;
