--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,15 +12,13 @@
 * btn
 * form input textarea
 * loading
-* Header
-* Footer
+* Header & footer
 * nav
 * banner
 * mod
 * AsideMod
 * page
-* font
-* icon
+* font icon
 * skrollr
 */
 
@@ -79,7 +77,7 @@
 /*========================================================================*\
 		>	form input textarea
 \*========================================================================*/
-// @import "module/_formInputSelect";
+@import "module/_formInputSelect";
 @import "module/_inputCheckbox";
 
 // /*------------------------------------------------------------------------*\
@@ -92,16 +90,11 @@
 /*------------------------------------------------------------------------*\
 /*------------------------------------------------------------------------*\
 /*========================================================================*\
-		>	Header
+		>	Header & footer
 \*========================================================================*/
 @import "project/_Header";
+@import "project/_Footer";
 
-// /*------------------------------------------------------------------------*\
-// /*------------------------------------------------------------------------*\
-// /*========================================================================*\
-// 		>	Footer
-// \*========================================================================*/
-// @import "project/_Footer";
 
 // /*------------------------------------------------------------------------*\
 // /*------------------------------------------------------------------------*\
@@ -110,23 +103,23 @@
 // \*========================================================================*/
 
 
-// /*------------------------------------------------------------------------*\
-// /*------------------------------------------------------------------------*\
-// /*========================================================================*\
-// 		>	banner
-// \*========================================================================*/
-// @import "_CAROUSEL";
+/*------------------------------------------------------------------------*\
+/*------------------------------------------------------------------------*\
+/*========================================================================*\
+		>	banner
+\*========================================================================*/
+@import "_CAROUSEL";
 
 
-// /*------------------------------------------------------------------------*\
-// /*------------------------------------------------------------------------*\
-// /*========================================================================*\
-// 		>	mod
-// \*========================================================================*/
+/*------------------------------------------------------------------------*\
+/*------------------------------------------------------------------------*\
+/*========================================================================*\
+		>	mod
+\*========================================================================*/
 // @import "module/_tabs";
 // @import "module/_tag_vertical";
 
-// @import "project/_MOD";
+@import "project/_MOD";
 // @import "module/_notifications";
 
 // /*------------------------------------------------------------------------*\
@@ -142,7 +135,7 @@
 /*========================================================================*\
 		>	page
 \*========================================================================*/
-// @import "project/_page_index";
+@import "project/_page_index";
 // @import "project/_page_works";
 // @import "project/_page_aboutContent";
 // @import "project/_page_collaborate";
@@ -156,13 +149,17 @@
 \*========================================================================*/
 // @import "project/_FONT";
 // @import "module/_ICON";
-// @import "project/_FontIcon";
+@import "project/_FontIcon";
 
 
 
 
-/*========================================================================*\
-		>	skrollr
-\*========================================================================*/
+// /*========================================================================*\
+// 		>	skrollr
+// \*========================================================================*/
 // @import "_skrollrFixedPos";
 
+/*========================================================================*\
+		>	ANI
+\*========================================================================*/
+@import "project/_ANI";
