--- a/plugin/pathLoader/effect2.css
+++ b/plugin/pathLoader/effect2.css
@@ -82,7 +82,7 @@
 }*/
 
 .ip-header .ip-logo svg path {
-	fill: #1c9ccd;
+	fill: #45bcb4;
 }
 
 .ip-header .ip-loader svg path {
@@ -97,16 +97,16 @@
 .ip-header .ip-loader svg path.ip-loader-circle {
 	-webkit-transition: stroke-dashoffset 0.2s;
 	transition: stroke-dashoffset 0.2s;
-	stroke: #1c9ccd;
+	stroke: #45bcb4;
 }
 
 /* Content */
 .ip-main {
 	overflow: hidden;
 	margin: 0 auto;
-	padding: 160px 0 10em 0;
+/*	padding: 160px 0 10em 0;
 	max-width: 1100px;
-	width: 90%;
+	width: 90%;*/
 }
 
 .ip-main h2 {
@@ -224,12 +224,12 @@
 }
 
 @-webkit-keyframes animLoadedLogo {
-	to { -webkit-transform: translate3d(-10%,100%,0) translate3d(0,50px,0) scale3d(0.65,0.65,1); }
+	to { -webkit-transform: translate3d(-10%,100%,0) translate3d(0,-100%,0) scale3d(0.65,0.65,1); }
 }
 
 @keyframes animLoadedLogo {
-	to { -webkit-transform: translate3d(-10%,100%,0) translate3d(0,50px,0) scale3d(0.65,0.65,1);
-		 transform: translate3d(-10%,100%,0) translate3d(0,50px,0) scale3d(0.65,0.65,1); }
+	to { -webkit-transform: translate3d(-10%,100%,0) translate3d(0,-100%,0) scale3d(0.65,0.65,1);
+		 transform: translate3d(-10%,100%,0) translate3d(0,-100%,0) scale3d(0.65,0.65,1); }
 }
 
 .loaded .ip-loader {
