--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -1,49 +1,14 @@
 @charset "UTF-8";
 
-$cnt_width: 1140px;
+$cnt_width: 1200px;
 
 
 //------------------------------------*\
 //		color
 //------------------------------------*/
 //project
-
-$colors:(
-	nor: (
-		1 : #009ab2,
-		2 : #e9c636,
-		3 : #fdd209,
-		4 : #efd468,
-		5 : #d4b736,
-		6 : #18a482,
-		7 : #54d4d5,
-		font_c1: #006d7e,
-		font_c2: #2d8ea1,
-		logo_color1     : #6EB92B,
-		logo_color2     : #5C605D,
-		hover_color     : #bc0021,
-		footer_color    : #585858
-	      ),
-	gr:(
-        1           : #595757,
-        2           : #747474,
-        3           : #6b6b6b,
-        4           : #9b9b9b,
-        5           : #dddddd,
-        6           : #b6b6b6,
-        7           : #e3e2e2,
-        8           : #e0e0e0,
-
-        bg_color    : #fafafa
-	    )
-         );
-
-
-
-$normal_color: #12377a;  //主色
-$normal_color1: #e60012;  //輔色1
-
-
+$normal_color: #45bcb4;  //主色
+$normal_color1: #282828;  //輔色1
 
 
 $normal_color2: #fdd209;
@@ -94,8 +59,9 @@ $DF_color2: #747474;
 //		font
 //------------------------------------*/
 $normal_font: "Microsoft JhengHei", "微軟正黑體", \5FAE\x8F6F\6B63\9ED1\4F53, Arial, "Helvetica Neue", Helvetica;
+$normal_font4: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "蘋果儷中黑", "Apple LiGothic Medium", "微軟正黑體", "Microsoft JhengHei", sans-serif;
 $normal_font2: "PMingLiU", \65B0\7EC6\660E\4F53, Arial, "Helvetica Neue", Helvetica, sans-serif;
-$normal_font3: Arial, "Helvetica Neue", Helvetica, sans-serif;
+$normal_font3: "Helvetica Neue", Arial, Helvetica, sans-serif;
 $ff-CenturyGothic: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
 $ff-Verdana: Verdana, "Geneva", sans-serif;
 $ff-Helvetica:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
@@ -138,6 +104,7 @@ $borderRadius: 8px; // 圓角半徑
 
 $boxShadow: 0px 9px 21px rgba(0, 0, 0, 0.75);
 $boxShadowHover: 3px 10px 21px rgba(0, 0, 0, 1);
+$boxShadowHover1: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
 
 
 // $fill_in_table_bg: #edecea;
