--- a/sass/module/_notifications.scss
+++ b/sass/module/_notifications.scss
@@ -66,7 +66,7 @@ $notiH: 760px+40;
 	height: 65px;
 	// margin-top: 35px;
 	color: #404040;
-	@include bg($font_c1);
+	// @include bg($font_c1);
 }
 #notifications-full-text{
 	width: 100%;
