--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,16 +10,14 @@
 * _Initial
 * _Layout
 * btn
-* form input textarea
 * loading
 * Header & footer
-* nav
 * banner
 * mod
-* AsideMod
 * page
 * font icon
 * skrollr
+* ANI
 */
 
 @import "_variable";
@@ -72,13 +70,13 @@
 @import "module/_btn";
 // @import "_materialBtn";
 
-/*------------------------------------------------------------------------*\
-/*------------------------------------------------------------------------*\
-/*========================================================================*\
-		>	form input textarea
-\*========================================================================*/
-@import "module/_formInputSelect";
-@import "module/_inputCheckbox";
+// /*------------------------------------------------------------------------*\
+// /*------------------------------------------------------------------------*\
+// /*========================================================================*\
+// 			form input textarea
+// \*========================================================================*/
+// @import "module/_formInputSelect";
+// @import "module/_inputCheckbox";
 
 // /*------------------------------------------------------------------------*\
 // /*------------------------------------------------------------------------*\
@@ -94,13 +92,6 @@
 \*========================================================================*/
 @import "project/_Header";
 @import "project/_Footer";
-
-
-// /*------------------------------------------------------------------------*\
-// /*------------------------------------------------------------------------*\
-// /*========================================================================*\
-// 		>	nav
-// \*========================================================================*/
 
 
 /*------------------------------------------------------------------------*\
@@ -120,14 +111,7 @@
 // @import "module/_tag_vertical";
 
 @import "project/_MOD";
-// @import "module/_notifications";
-
-// /*------------------------------------------------------------------------*\
-// /*------------------------------------------------------------------------*\
-// /*========================================================================*\
-// 		>	AsideMod
-// \*========================================================================*/
-// @import "project/_AsideMod";
+@import "module/_notifications";
 
 
 /*------------------------------------------------------------------------*\
