--- a/plugin/pathLoader/effect2.css
+++ b/plugin/pathLoader/effect2.css
@@ -109,7 +109,7 @@
 	width: 90%;*/
 }
 
-.ip-main h2 {
+/*.ip-main h2 {
 	margin: 0;
 	padding: 0.5em 0 1em;
 	color: #1c9ccd;
@@ -118,7 +118,7 @@
 	font-size: 4vw;
 	line-height: 1;
 }
-
+*/
 .browser {
 	margin: 0 auto;
 	padding-top: 8%;
