--- a/sass/Project/_Footer.scss
+++ b/sass/Project/_Footer.scss
@@ -1,3 +1,128 @@
+.contact_form {
+	hgroup {
+		position: relative;
+		@include wh2(75);
+		margin-right: 30px;
+		&:before {
+			@include psudoClass();
+			@include absolute();
+			z-index: 20;
+			@include wh2;
+			@include bg($normal_color1);
+			@include rotate(45deg);
+		}
+		&:after {
+			@include psudoClass();
+			@include absolute($B:-10px);
+			z-index: 19;
+			@include wh2;
+			@include bg($normal_color);
+			@include rotate(45deg);
+		}
+	}
+	&-left {
+		margin-bottom: 1em;
+		p {
+			// width: 60%;
+			float: none;
+			padding: 0 0 0 0.8em;
+			letter-spacing: 1px;
+		}
+		ul {
+			padding-left: 106px;
+			padding-top: 2em;
+		}
+		li {
+			border-bottom: 1px solid #dddede;
+			&:first-of-type {
+				border-top: 1px solid #dddede;
+			}
+		}
+	}
+	&-right {
+		margin-bottom: 1em;
+		li {
+			&:first-of-type {
+				padding-left: 0.6em;
+				border-bottom: 1px solid #dddede;
+			}
+		}
+	}
+	h2 {
+		position: absolute;
+		z-index: 21;
+		@include wh2;
+		margin: 0;
+		color: #fff;
+		@include adjFontSize(16px);
+		text-transform: uppercase;
+		line-height: 75px;
+		text-indent: -3px;
+	}
+	.qrcode {
+		@include wh2(110);
+		@include bg('line-qrcode.png');
+		background-size: cover;
+	}
+	li {
+		position: relative;
+		width: 100%;
+	}
+	.btns {
+		display: table;
+		margin: auto;
+	}
+	&-reset {
+		margin-right: 1em;
+	}
+}
+
+.frm__label {
+	@include ib;
+	&.required {
+		&:after {
+			content: '*';
+			color: $normal_color;
+		}
+	}
+}
+.frm__field {
+	border: none;
+	width: 80%;
+	padding: 0 0.6em;
+	@include ib;
+	font-size: 1em;
+	line-height: 2.3125em;
+	-webkit-transition:all 0.45s ease-in-out;
+	-moz-transition:all 0.45s ease-in-out;
+	transition:all 0.45s ease-in-out;
+	&:focus {
+		-webkit-box-shadow:0 0 5px #999;
+		-moz-box-shadow:0 0 5px #999;
+		box-shadow:0 0 5px #999;
+		border-color:#999;
+	}
+}
+.frm__textarea {
+	width: 100%;
+	height: 217px;
+	padding: 0.6em;
+	border: none;
+	-webkit-transition:all 0.45s ease-in-out;
+	-moz-transition:all 0.45s ease-in-out;
+	transition:all 0.45s ease-in-out;
+	resize: none;
+	&:focus {
+		-webkit-box-shadow:0 0 5px #999;
+		-moz-box-shadow:0 0 5px #999;
+		box-shadow:0 0 5px #999;
+		border-color:#999;
+	}
+}
+.input-group {
+	border: 1px solid #dddede;
+}
+
 footer {
 	width: 100%;
 	&.global_ft {
