--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -9,9 +9,9 @@ $cnt_width: 1200px;
 //project
 $normal_color: #45bcb4;  //主色
 $normal_color1: #282828;  //輔色1
+$normal_color2: #84d8d1;
 
 
-$normal_color2: #fdd209;
 $normal_color3: #e67800;
 $normal_color4: #af1355;
 $normal_color5: #18a482;
