--- a/sass/module/_pageBtn.scss
+++ b/sass/module/_pageBtn.scss
@@ -17,30 +17,30 @@
 		text-align: center;
 		line-height: 30px;
 		float: left;
-		// @include circle(30px);
+		@include circle(30px);
 		position: relative;
 		&.number {
 			@include wh(30px);
-			background: #cfcfcf;
-			border: 1px solid #cfcfcf;
+			background-color: $normal_color;
+			// border: 1px solid $normal_color;
 			&:hover {
-				background: $normal_color;
-				border: 1px solid $normal_color;
+				background-color: #000;
+				// border: 1px solid #000;
 				a {
 					color: #fff;
 				}
-				&:after {
-					@include psudoClass;
-					@include triBtm($normal_color, 10px, 9px);
-					position: absolute;
-					bottom: -6px;
-					left: 4px;
-				}
+				// &:after {
+				// 	@include psudoClass;
+				// 	@include triBtm($normal_color, 10px, 9px);
+				// 	position: absolute;
+				// 	bottom: -6px;
+				// 	left: 4px;
+				// }
 			}
 		}
 		&.active {
-			background: $normal_color;
-			border: 1px solid $normal_color;
+			background-color: #000;
+			// border: 1px solid #000;
 			&>a {
 				color: #fff;
 			}
@@ -106,7 +106,7 @@
 	}
 	a {
 		display: block;
-		color: #000;
+		color: #fff;
 		font-size: 15px;
 		font-family: $normal_font;
 		font-weight: bolder;
