--- a/sass/Project/_Layout.scss
+++ b/sass/Project/_Layout.scss
@@ -31,7 +31,9 @@ section {
 $pageMap:(
 ('service_page', 'service', '366'),
 ('teams_page', 'teams', '366'),
-('goddess_page', 'goddess', '400')
+('goddess_page', 'goddess', '400'),
+('news_page', 'news', '400'),
+('contact_page', 'contact', '369')
        );
 
 .banner {
