--- a/sass/style.scss
+++ b/sass/style.scss
@@ -112,6 +112,7 @@
 
 @import "project/_MOD";
 @import "module/_notifications";
+@import "module/_iframeRWD";
 
 
 /*------------------------------------------------------------------------*\
@@ -123,9 +124,8 @@
 @import "project/_page_service";
 @import "project/_page_teams";
 @import "project/_page_goddess";
-
-
-
+@import "project/_page_news";
+@import "project/_page_contact";
 
 /*------------------------------------------------------------------------*\
 /*------------------------------------------------------------------------*\
